# deepforest-finetuning

./: .gitignore  .mypy.ini  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: code-quality.yml
configs/3d-geoinfo-2025/baseline/: evaluate_without_finetuning_10_cm.toml  evaluate_without_finetuning_2_5_cm.toml  evaluate_without_finetuning_5_cm.toml  evaluate_without_finetuning_7_5_cm.toml  predict_without_finetuning_10_cm.toml  predict_without_finetuning_2_5_cm.toml  run_baseline_evaluation.bat  (+1 more)
configs/baseline/: evaluate_without_finetuning_10_cm.toml  evaluate_without_finetuning_2_5_cm.toml  evaluate_without_finetuning_5_cm.toml  evaluate_without_finetuning_7_5_cm.toml  predict_without_finetuning_2_5_cm.toml  predict_without_finetuning_5_cm.toml  predict_without_finetuning_7_5_cm.toml
configs/finetuning/: run_finetuning.bat
configs/preprocessing/: filter_labels.toml  preprocess_manually_corrected_labels.toml  project_point_cloud_labels.toml  rescale_images.toml
configs/tree-ai-2025/: finetuning_5_cm_TreeAI_full.toml
notebooks/: mapping_plots.md
notebooks/3d-geoinfo-2025/: 1_table_dataset_overview.ipynb  2_example_annotations.ipynb  3_figure_label_projection.ipynb  4_get_best_runs.ipynb  5_paper_data_analysis.ipynb  README.md
scripts/: evaluate.py  finetuning.py  prediction.py  preprocessing.py
scripts/preprocessing/: project_point_cloud_labels.py
src/config/: __init__.py  _config.py
src/preprocessing/: project_point_cloud_labels.py
src/utils/: __init__.py  _annotations_to_coco.py  _coco_bbox_to_polygon.py  _export.py  _export_labels.py  _load_config.py
(+61 files in other folders)
